mejoras en vacaciones

--- a/templates/situacionesadms/basicform4.html
+++ b/templates/situacionesadms/basicform4.html
@@ -1,12 +1,20 @@
 {% if form.resolucion_vaciones %}
 {{ form.non_field_errors }}
 <div class="form-row">
-    <div class="form-group col">
+    <div class="form-group col-6">
+        <em></em>
         {{ form.resolucion_vaciones.errors }}
         {{ form.resolucion_vaciones.label_tag }}
         {{ form.resolucion_vaciones }}
     </div>
-    <div class="form-group col">
+    <div class="w-100"></div>
+    <div class="form-group col-6">
+        {{ form.no_reserva_rectoria.errors }}
+        {{ form.no_reserva_rectoria.label_tag }}
+        {{ form.no_reserva_rectoria }}
+    </div>
+    <div class="w-100"></div>
+    <div class="form-group col-6">
         {{ form.no_dias_a_reservar.errors }}
         {{ form.no_dias_a_reservar.label_tag }}
         {{ form.no_dias_a_reservar }}
