--- a/templates/situacionesadms/modifica_corrige_a.html
+++ b/templates/situacionesadms/modifica_corrige_a.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block contenido %}
+<!-- Permitir solicitar Modificaciones o Correcciones -->
 <form action="." method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <fieldset class="form-group">
