--- a/templates/situacionesadms/selecciona_situaciones.html
+++ b/templates/situacionesadms/selecciona_situaciones.html
@@ -39,7 +39,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <img src="{% static 'img/situacion-vinculacion.png' %}" class="img-fluid"
+                <img src="{% static 'img/situación-vinculación-img.png' %}" class="img-fluid"
                     alt="tabla situaciones administrativas según vinculación funcionario">
             </div>
 
