--- a/templates/situacionesadms/formato.html
+++ b/templates/situacionesadms/formato.html
@@ -17,7 +17,7 @@
             <div class="col-8">
                 <spam tabindex="0" role="button" data-toggle="popover" data-placement="bottom"
                     data-content="{{nota_situacion}}">
-                    <i class="fas fa-info-circle mx-1 text-warning rounded-circle"></i>
+                    <button class="btn bg-light"><i class=" fas fa-info-circle mx-1 text-warning rounded-circle"></i></button>
                 </spam>
                 <strong>{{ solicitud|title }}</strong>
             </div>
